# RAG-Model-From-Discourse-and-github

./: .dockerignore  DOCKERFILE  LICENSE  add_url_to_tds.py  app.py  create_embedding.py  main.py  metadata2.json  new.py  pyproject.toml  requirements.txt  scrape_discourse.py
